# gpu-playground

./: .gitignore  LICENSE  README.md  gpuassert.cu  matmul.cu  vecadd.cu
python/: .clangd  CMakeLists.txt  README.md  cmake_setuptools.py  complex_operation.cu  complex_operation_comp128.cu  complex_operation_fp32.cu  setup.py  test.py  test_fp32.py
